[package]
name = "redis-proto"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_proto"
path = "src/lib.rs"

[[bin]]
name = "redis-proto"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.15", features = ["full", "tracing"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
bytes = { version = "1.0.0", features = ["serde"] }
structopt = "0.3.5"
sloggers = "0.3.4"
lazy_static = "1.4.0"
slog = "2.5.2"
memchr = "2.3.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
proptest = "0.9.4"
