[package]
name = "redis-proto"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_proto"
path = "src/lib.rs"

[[bin]]
name = "redis-proto"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.15", features = ["full", "tracing"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
bytes = { version = "1.0.0", features = ["serde"] }
structopt = "0.3.5"
sloggers = "0.3.4"
lazy_static = "1.4.0"
slog = "2.5.2"
dashmap = { version = "4.0.2", features = ["serde"] }
memchr = "2.3.0"
serde = { version = "1.0.188", features = ["derive", "rc"] }
parking_lot = { version = "0.9.0", features = ["serde"] }
directories = "2.0.2"
rmp-serde = "0.15"
smallvec = "1.4.1"
seahash = "3.0.6"

[dev-dependencies]
pretty_assertions = "0.6.1"
