[package]
name = "redis-proto"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_proto"
path = "src/lib.rs"

[[bin]]
name = "redis-proto"
path = "src/main.rs"

[dependencies]
tokio = { version = " 1.36.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = { version = "1.0.0", features = ["serde"] }
structopt = "0.3.5"
sloggers = "0.3.4"
lazy_static = "1.4.0"
slog = "2.5.2"
dashmap = { version = "4.0.2", features = ["serde"] }
memchr = "2.3.0"
serde = { version = "1.0.188", features = ["derive", "rc"] }
parking_lot = { version = "0.9.0", features = ["serde"] }
directories = "2.0.2"
rmp-serde = "0.15"
smallvec = "1.4.1"
seahash = "3.0.6"
growable-bloom-filter = "2.0.1"
amadeus-streaming = "0.4.3"
futures = "0.3.1"
futures-util = "0.3.1"
x7 = { git = "https://github.com/dpbriggs/x7.git", rev = "f1a410d0" }
num-traits = "0.2.14"
time = "0.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "keys_benchmark"
harness = false